[gd_scene load_steps=4 format=3 uid="uid://b3d348mleq0ms"]

[ext_resource type="Texture2D" uid="uid://boxwjwmimue8x" path="res://Assets/Static/Buffs/buff_dmg.png" id="1_ou4vh"]
[ext_resource type="Script" path="res://Scripts/buffs/damage_buff.gd" id="1_yyngj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n52b0"]

[node name="DamageBuff" type="Area2D"]
position = Vector2(10, 10)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_yyngj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n52b0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.19209e-07, -2.98023e-08)
scale = Vector2(1.53846, 1.33333)
texture = ExtResource("1_ou4vh")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
